Fixed issues with animation serious issue: z-index
The todos stacking animation was not playing smoothly on my thone.

I found out that it was due to the z-index property used in the keyframes animations.

So, I removed it from keyframes, and used JavaScript to set indexes of the todo-items

After this, the animations runs butter-smooth!

--- a/src/components/Settings.css
+++ b/src/components/Settings.css
@@ -6,27 +6,58 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    opacity: 0;
-    animation: sp-anim 0.25s ease forwards;
-    animation-delay: 0.12s ;
 
     & h2{
         margin-bottom: 20px;
     }
+}
 
-    & .settings-item{
-        width: 100%;
-        height: 50px;
-        background-color: rgb(245, 245, 245);
-        margin-bottom: 10px;
-        border-radius: 10px;
-        padding-left: 20px;
-        display: flex;
-        flex-direction: row;
-        justify-content: start;
-        align-items: center;
+.settings-item {
+    width: 100%;
+    height: 50px;
+    background-color: rgb(245, 245, 245);
+    margin-bottom: 10px;
+    border-radius: 10px;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    font-weight: 500;
+    font-size: 16px;
+    & p{
+        color: rgb(47, 107, 164)
+    }
+}
+
+.settings-option-box{
+    padding: 5px 10px;
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-left: 10px;
+    position: relative;
+
+    & button{
+        min-width: 70px;
+        padding: 5px 10px;
+        background-color: transparent;
         font-weight: 500;
         font-size: 16px;
+        border: none;
+        z-index: 2;
+        cursor: pointer;
+    }
+
+    & div {
+        position: absolute;
+        background-color: white;
+        z-index: 1;
+        transition: left 0.25s ease;
+        border-radius: 5px;
     }
 }
 
