--- a/src/index.css
+++ b/src/index.css
@@ -334,12 +334,12 @@
     0%{
         opacity: 0;
         transform: translateY(-50px) scale(0.9);
-        z-index: -1;
+        /* z-index: -1; */
     }
     100% {
         opacity: 1;
         transform: translateY(0) scale(1);
-        z-index: 0.5;
+        /* z-index: 0.5; */
     }
 }
 
